--- a/calc-app/Dockerfile.dev
+++ b/calc-app/Dockerfile.dev
@@ -8,6 +8,8 @@ WORKDIR '/app'
 COPY package.json .
 COPY package-lock.json .
 RUN npm install
+
+# for karma tests
 RUN npm install puppeteer --only=dev
 
 COPY . .
